--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
   "dependencies": {
     "babel-cli": "6.24.1",
     "babel-core": "6.25.0",
+    "babel-eslint": "^8.2.2",
     "babel-loader": "7.1.1",
     "babel-plugin-transform-class-properties": "6.24.1",
     "babel-preset-env": "1.5.2",
     "babel-preset-react": "6.24.1",
     "css-loader": "0.28.4",
+    "eslint": "^4.18.1",
     "eslint-plugin-react": "^7.6.1",
     "live-server": "^1.2.0",
     "node-sass": "4.5.3",
